--- a/public/template.html
+++ b/public/template.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <title>Weather Dashboard</title>
+        <title>Surf Weasel | Surf Report</title>
         <meta charset="UTF-8"/>
             <!-- media queries -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,23 +14,49 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
             <!-- css -->
-        <link rel="stylesheet" href="/assets/css/reset.css" type="text/css"/>
-        <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
+        <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+            <!-- jQuery -->
         <script src="assets/js/jquery-3.5.1.min.js"></script>
     </head>
     <body>
-		<nav class="navbar">
+		<nav class="navbar navbar-dark bg-dark">
 			<div class="container-fluid justify-content-center">
 				<span id="title" class="navbar m-n1 mb-0 h1">Surf Weasel</span>
 			</div>
 		</nav>
 
-		{{{ body }}}
+        <!-- This will be a separate handlebars file (start) -->
+
+        <div class="media-body mt-5">
+            <div class="card m-5 mr-5 ml-5">
+                <div class="row m-5">
+                    <div class="col"></div>
+
+                    <div class="col-3">
+                        <div class="input-group mb-3">
+                            <input id="emailLogin" type="text" class="form-control" placeholder="Email" aria-label="email" aria-describedby="basic-addon1">
+                          </div>
+                          <div class="input-group mb-3">
+                            <input id="passwordLogin" type="text" class="form-control" placeholder="Password" aria-label="password" aria-describedby="basic-addon1">
+                          </div>
+                          <div id="login-button">
+                            <button type="submit" class="btn btn-primary">Login</button>
+                          </div>
+                  
+                    </div>
+
+                    <div class="col"></div>
+                </div>
+                
+            </div>
+        </div>
+        <!-- This will be a separate handlebars file (end) -->
+
 		
             <!-- sticky footer -->
         <footer class="navbar bg-dark fixed-bottom ">
             <div class="container d-flex justify-content-center">
-                <span class="text-muted"> &#169; Mitchell Duncan 2020</span>
+                <span class="text-muted"> &#169; Team 3 2021</span>
                 </div>
         </footer>
   <script src="/assets/js/script.js"></script>
