added html template, login handlebars, signup handlebars

--- a/public/template.html
+++ b/public/template.html
@@ -1,3 +1,4 @@
+<!-- this is just an example of how the html handlebars may look -->
 <!DOCTYPE html>
 
 <html lang="en">
@@ -27,7 +28,25 @@
 
         <!-- This will be a separate handlebars file (start) -->
 
-        <div class="media-body mt-5">
+
+
+
+        <!-- This will be a separate handlebars file (end) -->
+
+		
+            <!-- sticky footer -->
+        <footer class="navbar bg-dark fixed-bottom ">
+            <div class="container d-flex justify-content-center">
+                <span class="text-muted"> &#169; Team 3 2021</span>
+                </div>
+        </footer>
+  <script src="/assets/js/script.js"></script>
+    </body>
+</html>
+
+<!-- Login handlebars -->
+
+        <!-- <div class="media-body mt-5">
             <div class="card m-5 mr-5 ml-5">
                 <div class="row m-5">
                     <div class="col"></div>
@@ -49,16 +68,44 @@
                 </div>
                 
             </div>
-        </div>
-        <!-- This will be a separate handlebars file (end) -->
+        </div> -->
 
-		
-            <!-- sticky footer -->
-        <footer class="navbar bg-dark fixed-bottom ">
-            <div class="container d-flex justify-content-center">
-                <span class="text-muted"> &#169; Team 3 2021</span>
-                </div>
-        </footer>
-  <script src="/assets/js/script.js"></script>
-    </body>
-</html>
+<!-- Signup handlbars -->
+
+<!-- <div class="media-body mt-5">
+    <div class="card m-5 mr-5 ml-5">
+        <div class="row m-5">
+            <div class="col"></div>
+
+            <div class="col-5">
+                <p>Please enter the email address you would like to use:</p>
+                <div class="input-group mb-3">
+                    <input id="emailLogin" type="text" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="basic-addon1">
+                  </div>
+                  <p>What is your first name?</p>
+                  <div class="input-group mb-3">
+                    <input id="passwordLogin" type="text" class="form-control" placeholder="First Name" aria-label="First Name" aria-describedby="basic-addon1">
+                  </div>
+                  <p>What is your last name?</p>
+
+                  <div class="input-group mb-3">
+                    <input id="passwordLogin" type="text" class="form-control" placeholder="Last Name" aria-label="Last Name" aria-describedby="basic-addon1">
+                  </div>
+                  <p>Please enter a password for your account:</p>
+                  <div class="input-group mb-3">
+                    <input id="passwordLogin" type="text" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1">
+                  </div>
+                  <p>Please re enter your password:</p>
+                  <div class="input-group mb-3">
+                    <input id="passwordLogin" type="text" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1">
+                  </div> 
+                  <div id="signup-button">
+                    <button type="submit" class="btn btn-primary">Signup!</button>
+                  </div>     
+            </div>
+
+            <div class="col"></div>
+        </div>
+        
+    </div>
+</div> -->
